--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
+    "start": "pm2 start",
     "test": "test"
   },
   "repository": {
@@ -20,5 +21,14 @@
   "bugs": {
     "url": "https://github.com/zzis/cloud-calendar-server/issues"
   },
-  "homepage": "https://github.com/zzis/cloud-calendar-server#readme"
+  "homepage": "https://github.com/zzis/cloud-calendar-server#readme",
+  "dependencies": {
+    "koa": "^2.7.0"
+  },
+  "devDependencies": {
+    "pm2": "^3.5.1",
+    "ts-node": "^8.3.0",
+    "tslint": "^5.18.0",
+    "typescript": "^3.5.3"
+  }
 }
