--- a/package.json
+++ b/package.json
@@ -22,10 +22,16 @@
     "url": "https://github.com/zzis/cloud-calendar-server/issues"
   },
   "homepage": "https://github.com/zzis/cloud-calendar-server#readme",
+  "_moduleAliases": {
+    "@controllers": "src/controllers"
+  },
   "dependencies": {
-    "koa": "^2.7.0"
+    "koa": "^2.7.0",
+    "koa-router": "^7.4.0",
+    "module-alias": "^2.2.0"
   },
   "devDependencies": {
+    "@types/koa": "^2.0.49",
     "pm2": "^3.5.1",
     "ts-node": "^8.3.0",
     "tslint": "^5.18.0",
