--- a/package.json
+++ b/package.json
@@ -23,15 +23,20 @@
   },
   "homepage": "https://github.com/zzis/cloud-calendar-server#readme",
   "_moduleAliases": {
-    "@controllers": "src/controllers"
+    "@controllers": "src/controllers",
+    "@services": "src/services",
+    "@dao": "src/dao"
   },
   "dependencies": {
     "koa": "^2.7.0",
     "koa-router": "^7.4.0",
-    "module-alias": "^2.2.0"
+    "module-alias": "^2.2.0",
+    "sequelize": "^5.10.0",
+    "sqlite3": "^4.0.9"
   },
   "devDependencies": {
     "@types/koa": "^2.0.49",
+    "@types/sequelize": "^4.28.3",
     "pm2": "^3.5.1",
     "ts-node": "^8.3.0",
     "tslint": "^5.18.0",
