--- a/package.json
+++ b/package.json
@@ -25,13 +25,16 @@
   "_moduleAliases": {
     "@controllers": "src/controllers",
     "@services": "src/services",
-    "@dao": "src/dao"
+    "@dao": "src/dao",
+    "@models": "src/dao/models"
   },
   "dependencies": {
     "koa": "^2.7.0",
     "koa-router": "^7.4.0",
     "module-alias": "^2.2.0",
+    "reflect-metadata": "^0.1.13",
     "sequelize": "^5.10.0",
+    "sequelize-typescript": "^1.0.0-beta.3",
     "sqlite3": "^4.0.9"
   },
   "devDependencies": {
