--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "pm2 start",
-    "test": "test"
+    "test": "mocha --opts ./mocha.opts"
   },
   "repository": {
     "type": "git",
@@ -38,8 +38,11 @@
     "sqlite3": "^4.0.9"
   },
   "devDependencies": {
+    "@testdeck/mocha": "^0.0.6",
     "@types/koa": "^2.0.49",
+    "@types/mocha": "^5.2.7",
     "@types/sequelize": "^4.28.3",
+    "mocha": "^6.1.4",
     "pm2": "^3.5.1",
     "ts-node": "^8.3.0",
     "tslint": "^5.18.0",
