--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "target": "es2017",
     "outDir": "./dist",
     "baseUrl": ".",
+    "sourceMap": true,
     "esModuleInterop": true,
     "emitDecoratorMetadata": true,
     "paths": {
@@ -16,5 +17,6 @@
   },
   "include": [
     "src/**/*",
+    "tests/**/*",
   ],
 }
