--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@controllers": "src/controllers",
     "@services": "src/services",
     "@dao": "src/dao",
-    "@models": "src/dao/models"
+    "@models": "src/dao/models",
+    "@config": "config"
   },
   "dependencies": {
     "koa": "^2.7.0",
