--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
       "@services/*": ["src/services/*"],
       "@dao/*": ["src/dao/*"],
       "@models/*": ["src/dao/models/*"],
+      "@config/*": ["config/*"]
     },
   },
   "include": [
