feat(test): create test for calendar service

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "start": "pm2 start",
-    "test": "mocha --opts ./mocha.opts"
+    "test": "mocha --opts ./mocha.opts",
+    "test-single": "mocha --require ts-node/register ./tests/services/calendar.service.test.ts"
   },
   "repository": {
     "type": "git",
